# Nimbus

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README_ja.md  README_zh.md  config.ini  idea.md
.superpowers/brainstorm/1025-1778569446/state/: server-stopped
.superpowers/brainstorm/955-1778567508/content/: architecture.html
.superpowers/brainstorm/955-1778567508/state/: server-stopped
docs/: api-design.md  architecture.md  dev-guide.md  llm-alert-design.md  requirements.md  timepicker-design.md  user-guide.md
docs/images/: README.txt
docs/superpowers/specs/: 2026-05-12-weatherapp-design.md  2026-05-26-llm-alert-design.md
qml/: MainWindow.qml
qml/components/: APISettingsPane.qml  CitySelector.qml  HourlyCard.qml  LLMSettingsPane.qml  NavigationButton.qml  Theme.qml  TimeComboBox.qml  TimePicker.qml  TimePickerDialog.qml  Toolbar.qml  WeatherCard.qml
qml/views/: FutureView.qml  PastView.qml  SettingsView.qml  TodayView.qml
resources/: app.rc  qtquickcontrols2.conf  resources.qrc
scripts/: build_release.py  generate_wxs.py  install.ps1  setup.iss
src/: main.cpp
src/data/: WeatherCacheManager.cpp  WeatherCacheManager.h
src/llm/: LLMAlertGenerator.cpp  LLMAlertGenerator.h  LLMClient.cpp  LLMClient.h
src/network/: GitHubReleaseClient.cpp  GitHubReleaseClient.h  HttpClient.cpp  HttpClient.h  TencentApiClient.cpp  TencentApiClient.h
src/service/: AlertService.cpp  AlertService.h  LocationService.cpp  LocationService.h  NotificationManager.cpp  NotificationManager.h  WeatherService.cpp  WeatherService.h
src/util/: Config.cpp  Config.h  ScreenHelper.cpp  ScreenHelper.h  TimeUtil.cpp  TimeUtil.h  WeatherCode.cpp  WeatherCode.h
src/viewmodel/: SettingsViewModel.cpp  SettingsViewModel.h  TrayViewModel.cpp  TrayViewModel.h  WeatherViewModel.cpp  WeatherViewModel.h
tests/: CMakeLists.txt  tst_AlertCondition.cpp  tst_HourlyMerge.cpp  tst_HttpService.cpp
